--- a/layouts/partials/docs/inject/content-after.html
+++ b/layouts/partials/docs/inject/content-after.html
@@ -1,3 +1,3 @@
-<script>window.onload = function() {
+<!-- <script>window.onload = function() {
     window.scrollTo(0,document.body.scrollHeight);
-};</script>
+};</script> -->
