Migrate the rest of my old notes to hugo

--- a/layouts/shortcodes/katex.html
+++ b/layouts/shortcodes/katex.html
@@ -20,6 +20,7 @@
         { left: "\\[", right: "\\]", display: true },
         { left: "$", right: "$", display: false },
         { left: "\\(", right: "\\)", display: false }],
+      throwOnError: false,
       macros: {
         // Algebra-Precal
         "\\lcm": "\\mathop{\\mathrm{lcm}}",
