Start notes for new class

--- a/layouts/partials/docs/inject/content-after.html
+++ b/layouts/partials/docs/inject/content-after.html
@@ -1,1 +1,5 @@
-<!-- <script>window.onload = function () { window.scrollTo(0, document.body.scrollHeight); };</script> -->
+<script>
+    window.onload = function () {
+        window.scrollTo(0, document.body.scrollHeight);
+    };
+</script>
