--- a/layouts/partials/docs/inject/content-after.html
+++ b/layouts/partials/docs/inject/content-after.html
@@ -1,6 +1,5 @@
-<!-- <script>
+<script>
     window.onload = function () {
         window.scrollTo(0, document.body.scrollHeight);
     };
 </script>
- -->
