--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,8 +1,8 @@
 // Increase the maximum size of the entire container to make use of larger screens
-$container-max-width: 90rem;
+$container-max-width: 90%;
 // Convert to mobile-style single-pane view once page body becomes 40rem
 $mobile-breakpoint: $menu-width + $body-min-width * 2 + $toc-width;
 // Increase width of nav column
-$menu-width: 20rem;
+$menu-width: 16rem;
 // Increase width of table-of-contents column
-$toc-width: 20rem;
+$toc-width: 16rem;
