Add fix for https://github.com/alex-shpak/hugo-book/pull/481

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -58,3 +58,8 @@ aside nav ul li {
 .book-menu-hugo {
     margin-top: $padding-16;
 }
+
+// Scrollable katex equations
+.katex-display{
+  overflow: auto hidden;
+}
