--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -1,8 +1,8 @@
 <link rel="preload" href=/r/katex/fonts/KaTeX_Main-Regular.woff2 as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href=/r/katex/fonts/KaTeX_Main-Bold.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/katex/fonts/KaTeX_Main-Italic.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/katex/fonts/KaTeX_Math-Italic.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/katex/fonts/KaTeX_Size2-Regular.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/katex/fonts/KaTeX_Size3-Regular.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/fonts/roboto-v27-latin-regular.woff2 as="font" type="font/woff2" crossorigin="anonymous"> <link
-rel="preload" href=/r/fonts/roboto-v27-latin-700.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/katex/fonts/KaTeX_Main-Bold.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/katex/fonts/KaTeX_Main-Italic.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/katex/fonts/KaTeX_Math-Italic.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/katex/fonts/KaTeX_Size2-Regular.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/katex/fonts/KaTeX_Size3-Regular.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/fonts/roboto-v27-latin-regular.woff2 as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href=/r/fonts/roboto-v27-latin-700.woff2 as="font" type="font/woff2" crossorigin="anonymous">
