--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -21,6 +21,34 @@ img {
     }
 }
 
+@mixin theme-dark {
+  --body-background: #212121;
+  --body-background-tint: none;
+
+  --body-font-color: #e9ecef;
+
+  --color-link: #84b2ff;
+  --color-visited-link: #b88dff;
+
+  --icon-filter: brightness(0) invert(1);
+
+  --gray-100: #494e54;
+  --gray-200: #5c6165;
+  --gray-500: #999d9f;
+
+  @include accent("default", #64748b);
+  @include accent("note", #4486dd);
+  @include accent("tip", #3bad3b);
+  @include accent("important", #8144dd);
+  @include accent("warning", #f59e42);
+  @include accent("caution", #d84747);
+
+  // Fallback for {{< hint >}} shortcodes
+  @include accent("info", #4486dd);
+  @include accent("success", #3bad3b);
+  @include accent("danger", #d84747);
+}
+
 // Interactive indication when hovering over navbar buttons
 nav {
     .navbutton:hover {
