--- a/layouts/partials/docs/menu-hugo.html
+++ b/layouts/partials/docs/menu-hugo.html
@@ -2,26 +2,14 @@
   This is template for hugo menus, accepts MenuEntity as context
   https://gohugo.io/variables/menus/
 -->
-{{ if . }}
-  {{ template "book-menu-hugo" . }}
-{{ end }}
-
-{{ define "book-menu-hugo" }}
+{{- if .Menu -}} {{- template "book-menu-hugo" . -}} {{- end -}} {{ define "book-menu-hugo" }}
 <ul class="book-menu-hugo">
-  {{ range . }}
+  {{ range .Menu }}
   <li>
-    <a href="{{ .URL }}" {{ if not .Page }}target="_blank" rel="noopener"{{ end }}>
-      {{- .Pre -}}
-      {{ with .Page }}
-        {{ partial "docs/title" .Page }}
-      {{ else }}
-        {{ .Name }}
-      {{ end }}
-      {{- .Post -}}
+    <a href="{{ .URL }}" {{ if not .Page }}target="_blank" rel="noopener" {{ end }}>
+      {{- .Pre -}} {{ with .Page }} {{ partial "docs/title" .Page }} {{ else }} {{ .Name }} {{ end }} {{- .Post -}}
     </a>
-    {{- with .Children }}
-      {{ template "book-menu-hugo" . }}
-    {{- end }}
+    {{- with .Children }} {{ template "book-menu-hugo" . }} {{- end }}
   </li>
   {{ end }}
 </ul>
